# R-V-boat-simulation-for-spatial-field-reconstruction

./: .gitignore  README.md
GP/: gp_ns_knn.py  standalone_online_GP_updater.py
boat_px4/airframe/: 6020_gz_wamv
boat_px4/mixer/: wamv_mix.mix
boat_px4/wamv_model/: model.config  model.sdf  model.sdf.backup
boat_px4/wamv_model/urdf/: wamv.urdf
boat_px4/world/: lake_world.sdf
karin_ws/: requirements.txt
karin_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
karin_ws/install/field_sim/lib/field_sim/: field_sampler_node.py  lawnmower_mission.py
karin_ws/install/field_sim/share/field_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
karin_ws/install/field_sim/share/field_sim/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_field_sim__rosidl_generator_cppExport.cmake  export_field_sim__rosidl_generator_pyExport-noconfig.cmake  export_field_sim__rosidl_typesupport_fastrtps_cExport.cmake  export_field_sim__rosidl_typesupport_fastrtps_cppExport.cmake  field_sim__rosidl_typesupport_cExport.cmake  field_sim__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
karin_ws/install/field_sim/share/field_sim/launch/: field_validation.launch.py  lawnmower_mission.launch.py
karin_ws/install/field_sim/share/field_sim/scripts/: field_sampler.py  ground_truth_field_node.py  mission_test.py
karin_ws/install/field_sim/share/field_sim/srv/: SampleField.json
karin_ws/install/simsetup/lib/simsetup/: run_motor.py  teleop.py
karin_ws/install/simsetup/share/simsetup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
karin_ws/install/simsetup/share/simsetup/cmake/: simsetupConfig-version.cmake  simsetupConfig.cmake
karin_ws/install/simsetup/share/simsetup/environment/: ament_prefix_path.dsv  path.dsv
karin_ws/install/simsetup/share/simsetup/launch/: sim.launch.py
karin_ws/install/wamv_description/share/wamv_description/: local_setup.sh  package.sh  package.xml
karin_ws/install/wamv_description/share/wamv_description/cmake/: wamv_descriptionConfig.cmake
karin_ws/log/: latest_build
karin_ws/src/field_sim/: CMakeLists.txt  package.xml
karin_ws/src/field_sim/config/: generated_field_params.yaml
karin_ws/src/field_sim/launch/: complete_mission.launch.py
karin_ws/src/field_sim/rviz/: field_view.rviz
karin_ws/src/field_sim/scripts/: boat_tf_publisher.py  gp_reconstructor_node.py  test_geotagging.py
karin_ws/src/field_sim/srv/: SampleField.srv
karin_ws/src/simsetup/: CMakeLists.txt  package.xml
karin_ws/src/simsetup/launch/: sim.launch.py
karin_ws/src/simsetup/scripts/: GP_KNN.py  compare.py  teleop.py
karin_ws/src/simsetup/scripts/data/: aug15.csv  feb15.csv  latlon_range_rows.csv  sep19.csv
karin_ws/src/simsetup/scripts/data/sim_data/: lawnmower_samples_20251006_203022.csv  lawnmower_samples_20251006_203339.csv  lawnmower_samples_20251006_203946.csv  lawnmower_samples_20251006_213219.csv  sim1.csv  sim2.csv
karin_ws/src/wamv_description/: CMakeLists.txt
karin_ws/src/wamv_description/urdf/: wamv.urdf
(+16 files in other folders)
