<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simsetup</name>
  <version>0.0.0</version>
  <description>WAM-V sim helpers</description>
  <maintainer email="blazar@todo.todo">blazar</maintainer>
  <license>BSD-3-Clause</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime deps (no generic <depend> duplicates) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavsdk</exec_depend>
  <exec_depend>pynput</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
